Updates: -Fixed a lot of positioning issues -Replaced sprites -Added a basic JS toggle Apps Menu -Added Dark mode with basic JS code -Other perfectionist tweaks and fixes
TO DO:
-Add links to other projects in Apps Menu

--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
 :focus {
     outline: none;
 }
+.sprite {
+    background-image: url("img/sprite.png");
+    background-color: transparent;
+    background-repeat: no-repeat;
+}
+.gsprite{
+    background-image: url("img/gsprite.png");
+    background-color: transparent;
+    background-repeat: no-repeat;
+}
 body{
     height: 100vh;
     margin: 0;
@@ -13,18 +23,19 @@ header{
     display: flex;
     flex-direction: row;
     position: fixed;
+    z-index: 1;
 }
 nav{
     width: 100%;
     height: 50px;
     display: flex;
     align-items: center;
-    /* padding: 5px; */
 }
 nav div{
     display: flex;
     width: 50%;
     padding: 10px;
+    align-items: center;
 }
 nav div:nth-child(1){
     justify-content: start;
@@ -44,14 +55,68 @@ a:hover{
     text-decoration: underline;
 }
 #login{
-    background-color: #4285F4;
-    color: #fff;
-    height: 20px;
-    border-radius: 3px;
+    background: url("img/profile.jpg");
+    height: 30px;
+    width: 30px;
+    background-size: cover;
+    border-radius: 50%;
+    background-position: -1px;
+    cursor: pointer;
 }
 #login div{
     padding: 5px;
     line-height: 10px;
+}
+.popup{
+    position: absolute;
+    top: 60px;
+    right: 20px;
+    width: 220px;
+    height: 330px;
+    background-color: #fff;
+    border: 1px solid #c0c0c0;
+    flex-wrap: wrap;
+    align-content: space-around;
+    justify-content: flex-start;
+    box-shadow: 1px -1px 5px silver;
+    z-index: 99;
+    border-radius: 5px;
+}
+.popup a{
+    text-decoration: none;
+    color: #3b3b3b;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 90px;
+    height: 90px;
+    padding: 10px;
+}
+.popup a:hover{
+    background-color: #e8f0fe;
+}
+.popup a div:nth-of-type(1){
+    height: 48px;
+    width: 48px;
+}
+.first{
+    background-position: -10px -57px;
+}
+.second{
+    background-position: -10px -118px;
+}
+.third{
+    background-position: -10px -3px;
+}
+.fourth{
+    background-position: -10px -178px;
+}
+.fifth{
+    background-position: -10px -235px;
+}
+.icon_text{
+    padding-top: 5px;
 }
 main{
     display: flex;
@@ -59,23 +124,83 @@ main{
     align-items: center;
     justify-content: center;
     position: relative;
-    padding-top: 20%;
+    padding-top: 220px;
 }
-.fa-search{
+main img{
+    display: block;
+    margin: 0 auto;
+}
+.menu{
+    background-position: -131px -37px;
+    padding: 0;
+    height: 32px;
+    width: 32px;
+}
+.menu:hover{
+    background-color: #eee;
+    border-radius: 50%;
+}
+.search_icon{
     position: absolute;
-    padding: 13px 15px;
-    color: #3b3b3b;
+    padding: 11px 11px;
+    filter: contrast(0);
+    background-position: -248px -35px;
+    margin: 30px 30px;
+}
+.switch{
+    position: fixed;
+    bottom: 70px;
+    right: 15px;
+    height: 25px;
+    width: 25px;
+    background-position: -212px -40px;
+    cursor: pointer;
+}
+.switch:hover{
+    background-color: #eee;
+    border-radius: 50%;
+}
+.dark-mode{
+    background-color: #35363A;
+    color: #fff;
+}
+.dark-mode nav div a{
+    color: #fff;
+}
+.dark-mode .popup{
+    background-color: #35363A;
+    box-shadow: 0 -1px 2px 0 rgba(0, 0, 0, 0.3), 0 -2px 6px 2px rgba(0, 0, 0, 0.15);
+    border: 1px solid #000;
+}
+.dark-mode .popup a .icon_text{
+    filter: invert();
+}
+.dark-mode .buttons div{
+    color: #fff;
+    background-color: #2c2d31;
+}
+.dark-mode footer{
+    background-color: #2c2d31;
+}
+.dark-mode .switch, .dark-mode .menu, .dark-mode .search_icon{
+    filter: invert();
+}
+.dark-mode #search{
+    background-color: #393a3f;
+    color: #fff;
 }
 #search{
     width: 50vw;
     max-width: 500px;
     height: 40px;
-    border: 1px solid silver;
+    border: 1px solid #e1e1e1;
     border-radius: 50px;
     padding: 0 40px;
+    font-size: initial;
+    margin: 20px;
 }
-#search:hover{
-    box-shadow: 0.1px 0.1px 5px #c0c0c0;
+#search:hover, #search:active, #search:focus{
+    box-shadow: 0px 1.7px 5px #dfdfdf;;
     outline: none;
 }
 .buttons{
@@ -92,9 +217,12 @@ main{
     border-color: #c0c0c0;
     cursor: pointer;
     border: 1px solid #fff;
+    border-radius: 5px;
 }
 .buttons div:hover{
     border: 1px solid #c0c0c0;
+}
+.buttons a:hover{
     text-decoration: none;
 }
 footer{
